# autonomous-tractor-safety-system

./: .gitignore  PERCEPTION_SYSTEM_REVIEW.md  README.md  add_license.py  main.tex:Zone.Identifier  pytest.ini  run_all_simulation_scenarios.sh
.github/workflows/: ros2-ci.yml
Figures/: simulation_of_safety_system.png:Zone.Identifier
analysis_tools/: analyze_scenario.py  test_metrics_sanity.py
docs/: PACKAGE_DOCUMENTATION_TEMPLATE.md  camera_interface.md  radar_interface.md  safety_monitor.md  sensor_fusion.md
launch/: parameters.yaml  parameters_simulated.yaml  run_safety_system.py  run_safety_system_agopen_simulated.py  simulate_safety_system.py  simulate_sensor_fusion.py
launch/test_logs/: raw_detections_20250506_151548.csv  test_log_20250506_103338.csv
src/camera_interface/: package.xml  (+2 more)
src/navigation_interface/: package.xml  setup.cfg  setup.py
src/simulations/: frames_2025-09-11_09.51.35.gv  package.xml  setup.cfg  setup.py
src/simulations/config/: parameters.yaml  parameters_simulated.yaml
src/simulations/launch/: bring_up_sim.launch.py  log_safety_system.launch.py  real_world_logger.launch.py  run_calibration.launch.py  run_experiment_sim.launch.py  run_safety_system.launch.py  run_safety_system_agopen_simulated.launch.py  run_system_gazebo.launch.py  safety_system_core.launch.py  simulate_safety_system.launch.py  simulate_safety_system_in_ROS.launch.py  test_safety_system.launch.py
src/simulations/launch/test_logs/: control_log_20250506_151548.csv  fused_log_20250506_151548.csv
src/simulations/models/actor_1/: model.sdf
src/simulations/models/actor_2/: model.sdf
src/simulations/models/tractor_simple/: model.config  model.sdf
src/simulations/simulations/: agopen_simulator.py  calculate_parameters.py  camera_simulator.py  camera_to_camera.py  control_simulator.py  control_to_twist.py  laser_to_radar.py  lidar_to_radar.py  radar_simulator_can.py  sim_close_targets.py  simulate_objects.py  spatial_from_yolo.py  target_to_fuse_simulator.py  test_system_logger.py  visualize_tracks.py
src/simulations/simulations/gazebo/: camera_to_camera.py  control_to_twist.py  ego_odom_sim.py  lidar_to_radar.py  pedestrian_gt_bridge.py  scripted_driver.py  spatial_from_yolo.py  twist_to_control.py  visualize_tracks.py
src/simulations/simulations/logging_tools/: calibration_logger.py  detection_logger.py  gps_ego_motion.py  real_world_logger.py
src/simulations/simulations/system_integration/: agopen_simulator.py  camera_simulator.py  radar_simulator_can.py  sim_close_targets.py  simulate_objects.py  target_to_fuse_simulator.py
src/simulations/test/: test_copyright.py  test_flake8.py  test_system_integration.py
src/simulations/worlds/: generated.world  simple_field.sdf  simple_fieldS1.sdf  simple_fieldS2.sdf  simple_fieldS3.sdf  simple_fieldS4.sdf
src/tractor_safety_system_launch/: package.xml  setup.cfg  setup.py
src/tractor_safety_system_launch/config/: parameters.yaml  parameters_simulated.yaml  zed_f9p_rover.yaml
src/tractor_safety_system_launch/launch/: gps_rtk_ublox_ntrip.launch.py  perception_stack.launch.py  real_world_test.launch.py  safety_stack.launch.py  safety_system_core.launch.py
src/tractor_safety_system_launch/tractor_safety_system_launch/: navsatfix_rate_limiter.py  ntrip_gga_publisher.py  ntrip_tcp_client.py
test_logs/: control_log_20250908_094005.csv  raw_detections_20250908_094005.csv
testing_tools/: CALIBRATION.md  REAL_WORLD_TESTING_GUIDE.md  calibration_requirements.txt  gps_rtk_monitor.sh  gps_rtk_start.sh  last_launch_test.env  launch_test.sh  monitor_test.sh  ntrip_probe.py  record_test_bag.sh  replay_bags_stepwise.sh  run_all_simulation_scenarios.sh  run_calibration.sh  sensor_calibration.py  setup_can.sh  validate_system.sh  visualize_calibration_2d.py
(+78 files in other folders)
