<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulations</name>
  <version>0.0.0</version>
  <description>Gazebo and integration test setups for the autonomous tractor safety system</description>
  <maintainer email="eemil.kulmala@hotmail.com">eemil</maintainer>
  <license>Apache-2.0</license>

  <!-- Launch tooling -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Gazebo + bridge -->
  <!-- exec_depend>ros_gz_sim</exec_depend-->
  <!-- exec_depend>ros_gz_bridge</exec_depend-->

  <!-- Messages used in bridges -->
  <!--exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend-->

  <!-- Pipeline pkgs -->
  <exec_depend>radar_interface</exec_depend>
  <exec_depend>camera_interface</exec_depend>
  <exec_depend>sensor_fusion</exec_depend>
  <exec_depend>safety_monitor</exec_depend>
  <exec_depend>navigation_interface</exec_depend>
  <exec_depend>tractor_control</exec_depend>
  <exec_depend>tractor_safety_system_interfaces</exec_depend>

  <!-- Test deps -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
